@@ -14,6 +14,7 @@ Bug fixes:
   LDAPBackingDirectory
 - Fix: DirectoryVocabulary: getMsgid with default=None was broken
 - #913: explicitely allow Member to view members and groups dirs
+- #823: sort directory results case insensitively, and by default on name column.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - moved integration tests to ftests/ : use `zopectl test -f CPSDirectory` to run
